small ga fixes